Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompany_Mapping__mdt/SMAX_PS_OwnedByCompany_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>SAP Owned by Company split values leveraged by the mapping &quot;engine&quot; to assist in properly assigning Owned by Company value to Salesforce records.</description>
    <label>Owned By Company Mapping</label>
    <pluralLabel>Owned By Company Mappings</pluralLabel>
</CustomObject>