Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompany_Mapping__mdt/fields/SMAX_PS_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Company_Code__c</fullName>
    <description>SAP Company Code associated to the mapping record</description>
    <label>Company Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>