Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompany_Mapping__mdt/fields/SMAX_PS_Country__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Country__c</fullName>
    <description>Country string text related to mapping record</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>