Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompany_Mapping__mdt/fields/SMAX_PS_Mapping_Key__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Mapping_Key__c</fullName>
    <description>Unique composite key for each record based on field values from the same record</description>
    <label>Mapping Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>