Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompany_Mapping__mdt/fields/SMAX_PS_Owned_By_Company__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Owned_By_Company__c</fullName>
    <description>The Company/ Business Entity that owns the Salesforce record</description>
    <label>Owned By Company</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AES</fullName>
                <default>true</default>
                <label>AES</label>
            </value>
            <value>
                <fullName>LSDX</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>