Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompany_Mapping__mdt/fields/SMAX_PS_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Sales_Org__c</fullName>
    <description>SAP Sales Organization associated to the mapping record</description>
    <label>Sales Org</label>
    <length>5</length>
    <type>Text</type>
</CustomField>