Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompany_Mapping__mdt/fields/SMAX_PS_Service_Plant__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Service_Plant__c</fullName>
    <description>SAP Service Plant associated to the mapping record</description>
    <label>Service Plant</label>
    <length>5</length>
    <type>Text</type>
</CustomField>