Perkin-UAT/force-app/main/default/objects/SMAX_PS_OwnedByCompany_Mapping__mdt/listViews/SMAX_PS_All_Owned_By_Company_Mappings.listView-meta.xml
<ListView>
    <fullName>SMAX_PS_All_Owned_By_Company_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SMAX_PS_Country__c</columns>
    <columns>SMAX_PS_Owned_By_Company__c</columns>
    <columns>SMAX_PS_Company_Code__c</columns>
    <columns>SMAX_PS_Sales_Org__c</columns>
    <columns>SMAX_PS_Service_Plant__c</columns>
    <columns>SMAX_PS_Mapping_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Owned By Company Mappings</label>
    <language>en_US</language>
</ListView>